Spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -49,6 +49,7 @@ background-color:#cccccc;
 	margin: 0px auto;
 	width: 90%;
 	height: 525px;
+	border-bottom: 3px solid #cccccc;
 }
 
 	#images {
@@ -62,6 +63,7 @@ background-color:#cccccc;
 		width: 50%;
 		height: 100%;
 		float: left;
+		color: #ffffff;
 	}
 
 		#description p {
@@ -108,16 +110,13 @@ background-color:#cccccc;
 	}
 
 
-#limiter{
+#tab{
 	margin-left: 15px;
-	min-width: 300px;
-	max-width: 400px;
 	background-color: #ffffff;
 }
 
 #shell {
-	text-align: center;
-	margin: 0px auto;
+	margin: 20px auto;
 }
 
 #holder {
@@ -125,8 +124,4 @@ background-color:#cccccc;
 	margin: 0px auto;
 }
 
-#pic{
-	background-color: red;
-	margin: 10px;
-	height: 400px;	
-}
+
